# bigpen

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.docs/: README.md
.github/_workflows/: deploy.yml
admin/: .gitignore  manage.py  pyproject.toml
api/: pyproject.toml
api/dashboard/orders/: apps.py  models.py
api/dashboard/orders/migrations/: 0002_alter_order_status.py
api/dashboard/seed/fixtures/lists/: 0002_listitem.json
api/dashboard/seed/fixtures/stock/: 0001_stockcategory.json
api/dashboard/stock/: admin.py  models.py  urls.py
api/home/accounts/migrations/: 0001_initial.py
api/home/addresses/: apps.py  forms.py  serializers.py  urls.py  views.py
api/home/addresses/templates/addresses/: email-us.html  email-us.txt
api/home/articles/: admin.py  views.py
api/home/articles/templates/articles/: blogpage.html
api/home/articles/templates/articles/includes/: details.html
api/home/globals/: apps.py  urls.py
api/home/lists/: serializers.py
api/home/lists/management/commands/: setup_lists_groups.py
api/home/settings/: asgi.py  conf.py  urls.py
app/home/: views.py
app/orders/: admin.py  models.py
app/seed/: apps.py
app/settings/: conf.py  urls.py
app/stock/: admin.py  apps.py  models.py
backend/: .gitignore  manage.py  pyproject.toml
core/accounts/: admin.py  models.py
core/addresses/: admin.py  forms.py  models.py
core/articles/: admin.py  apps.py  views.py
core/base/: adminsite.py  models.py
core/lists/: admin.py  (+1 more)
web/: .gitignore  bootstrap.config.scss  next.config.ts  package-lock.json  package.json
(+218 files in other folders)
