[project]
name = "djanx"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
django = "5.2.3"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
django-filter = "25.1"
django-phonenumber-field = { extras = ["phonenumberslite"], version = "8.1.0" }
python-decouple = "3.8"
tzdata = "^2025.2"
pillow = "11.2.1"
psycopg = { extras = ["binary"], version = "3.2.9" }
gunicorn = "23.0.0"
django-ckeditor-5 = "0.2.18"
